<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="#367591"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:text="@string/menu"
            app:iconTint="#DFC5C5" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="237dp"
            android:layout_height="33dp"
            android:text="@string/nombre_app"
            android:textAlignment="center"
            android:textColor="#F1EEEE"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            app:iconTint="#DFC5C5" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#7AAABF"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        tools:layout_constraintTop_toBottomOf="@id/header">

        <EditText
            android:id="@+id/Nombre"
            android:layout_width="306dp"
            android:layout_height="55dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/nombre" />

        <EditText
            android:id="@+id/Apellido"
            android:layout_width="306dp"
            android:layout_height="55dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/apellido" />

        <EditText
            android:id="@+id/editTextText3"
            android:layout_width="306dp"
            android:layout_height="55dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/correo" />

        <Button
            android:id="@+id/reservar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reservar_turno"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>