<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/hamb"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:background="@color/rojo"
            app:srcCompat="@drawable/hamb"
            android:contentDescription="@string/visual_imagen_hamb" />

        <TextView
            android:id="@+id/textView"
            android:background="@color/gris"
            android:layout_width="235dp"
            android:layout_height="48dp"
            android:text="@string/nombre_app"
            android:textAlignment="center"
            android:textColor="@color/negro"
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/user"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@color/rojo"
            app:srcCompat="@drawable/user"
            android:contentDescription="@string/visual_imagen_usr" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/rest"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        tools:layout_constraintTop_toBottomOf="@id/header">

        <EditText
            android:id="@+id/correo"
            android:layout_width="306dp"
            android:layout_height="55dp"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/correo"
            android:background="@color/gris"/>

        <EditText
            android:id="@+id/contrasena"
            android:layout_width="306dp"
            android:layout_height="55dp"
            android:layout_marginBottom="20dp"
            android:background="@color/gris"
            android:inputType="textPassword"
            android:hint="@string/contrasena" />

        <TextView
            android:id="@+id/textViewRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="¿No tienes una cuenta? Regístrate"
            android:textColor="@color/blanco"
            android:clickable="true"
            android:onClick="openRegistrationActivity" />

        <Button
            android:id="@+id/ingresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/ingresar"
            android:onClick="OpenActivity"
            android:textStyle="normal|bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="OnClick" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>