<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/scrollView"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/hamb"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:background="@color/rojo"
            app:srcCompat="@drawable/hamb"
            android:contentDescription="@string/visual_imagen_hamb" />

        <TextView
            android:id="@+id/textView"
            android:background="@color/gris"
            android:layout_width="235dp"
            android:layout_height="48dp"
            android:text="@string/nombre_app"
            android:textAlignment="center"
            android:textColor="@color/negro"
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/user"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@color/rojo"
            app:srcCompat="@drawable/user"
            android:contentDescription="@string/visual_imagen_usr" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rest"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="411dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autoSizeTextType="uniform"
                android:background="@color/gris"
                android:text="@string/mis_resevas"
                android:textAlignment="center"
                android:textColor="@color/negro"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="369dp"
                    android:layout_height="275dp"
                    android:src="@drawable/hardrock" />

                <TextView
                    android:layout_width="371dp"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:background="@color/rojo"
                    android:text="@string/hardrock"
                    android:textAlignment="center"
                    android:textColor="#F8F6F6"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/botonRegresar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Volver a la pagina anterior" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
