<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/hamb"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:background="@color/rojo"
            app:srcCompat="@drawable/hamb"
            android:contentDescription="@string/visual_imagen_hamb" />

        <TextView
            android:id="@+id/textView"
            android:background="@color/gris"
            android:layout_width="235dp"
            android:layout_height="48dp"
            android:text="@string/nombre_app"
            android:textAlignment="center"
            android:textColor="@color/negro"
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/user"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@color/rojo"
            app:srcCompat="@drawable/user"
            android:contentDescription="@string/visual_imagen_usr" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/rest"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autoSizeTextType="uniform"
            android:background="@color/gris"
            android:text="SELECCIONE COMENSALES"
            android:textAlignment="center"
            android:textColor="@color/negro"
            android:textSize="24sp"
            android:textStyle="bold" />

        <NumberPicker
            android:id="@+id/numberPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/gris"/>

        <Button
            android:id="@+id/botonGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guardar" />

        <Button
            android:id="@+id/botonRegresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Volver a la pagina anterior"
            android:layout_marginBottom="20dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
